# polykube/server/api/routes.go
@@ -1,6 +1,7 @@
 package api
 
 import (
+	"github.com/ghilbut/polykube/api/v1/dex"
 	"net/http"
 	"path"
 
@@ -17,15 +18,34 @@ import (
 
 func AddRoutes(r *gin.Engine) {
 	r.GET("/metrics", getMetricsHandler())
-	r.GET("/healthz", healthCheckHandlerFunc)
+	r.GET("/healthz", getHealthCheckHandler())
 	r.GET("/swagger/*any", swaggerHandlerFunc)
 	r.GET("/swagger", swaggerRedirectHandlerFunc)
 
 	v1 := r.Group("/v1")
-	t := v1.Group("/terraform")
-	terraform.AddRoutes(t)
+	// Dex IDP
+	v1.GET("/dex/clients", dex.ListClients)
+	v1.POST("/dex/clients", dex.CreateClient)
+	v1.GET("/dex/clients/:id", dex.GetClient)
+	v1.PUT("/dex/clients/:id", dex.UpdateClient)
+	v1.DELETE("/dex/clients/:id", dex.DeleteClient)
+	// Terraform secrets
+	v1.GET("/terraform/secrets/:name", terraform.HandleGetSecret)
+	v1.POST("/terraform/secrets/:name", terraform.HandleCreateSecret)
+	v1.DELETE("/terraform/secrets/:name", terraform.HandleDeleteSecret)
+	v1.POST("/terraform/secrets/:name/values", terraform.HandleCreateSecretValue)
+	v1.PUT("/terraform/secrets/:name/values/:key", terraform.HandleUpdateSecretValue)
+	v1.DELETE("/terraform/secrets/:name/values/:key", terraform.HandleDeleteSecretValue)
 }
 
+// GetMetrics godoc
+// @Summary      Prometheus metrics
+// @Description  get metrics for prometheus exporter
+// @Tags         system
+// @Produce      plain
+// @Success      200  {object}  string
+// @Failure      500  {object}  string
+// @Router       /metrics [get]
 func getMetricsHandler() gin.HandlerFunc {
 	h := promhttp.Handler()
 	return func(ctx *gin.Context) {
@@ -33,8 +53,18 @@ func getMetricsHandler() gin.HandlerFunc {
 	}
 }
 
-var healthCheckHandlerFunc gin.HandlerFunc = func(ctx *gin.Context) {
-	ctx.String(http.StatusOK, "OK")
+// HealthCheck godoc
+// @Summary      Health check
+// @Description  health check for process controller and load balancer
+// @Tags         system
+// @Produce      plain
+// @Success      200  {path}  string
+// @Failure      500  {object}  string
+// @Router       /healthz [get]
+func getHealthCheckHandler() gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		ctx.String(http.StatusOK, "OK")
+	}
 }
 
 var swaggerHandlerFunc gin.HandlerFunc = ginSwagger.WrapHandler(swaggerfiles.Handler)
