# polykube/server/api/v1/dex/dto.go
@@ -1,0 +1,7 @@
+package dex
+
+type Client struct {
+	ClientID     string   `json:"clientId"`
+	ClientSecret string   `json:"clientSecret"`
+	RedirectURIs []string `json:"redirectURIs"`
+}
